// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render device list 1`] = `
.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 604px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c12:focus-visible,
.teleport-button__force-focus-visible .c12 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c12:hover,
.teleport-button__force-hover .c12 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c12:active,
.teleport-button__force-active .c12 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c12:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.54);
  border-color: rgba(255, 255, 255, 0.54);
  border-width: 1.5px;
  padding: 0 6.5px;
  min-height: 24px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c11:focus-visible,
.teleport-button__force-focus-visible .c11 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c11:hover,
.teleport-button__force-hover .c11 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c11:active,
.teleport-button__force-active .c11 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c11:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c9 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  color: rgba(255, 255, 255, 0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin-bottom: 16px;
  color: rgba(255, 255, 255, 0.72);
  text-align: center;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c7 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c7>thead>tr>th,
.c7>tbody>tr>th,
.c7>tfoot>tr>th,
.c7>thead>tr>td,
.c7>tbody>tr>td,
.c7>tfoot>tr>td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c7>thead>tr>th:first-child,
.c7>tbody>tr>th:first-child,
.c7>tfoot>tr>th:first-child,
.c7>thead>tr>td:first-child,
.c7>tbody>tr>td:first-child,
.c7>tfoot>tr>td:first-child {
  padding-left: 24px;
}

.c7>thead>tr>th:last-child,
.c7>tbody>tr>th:last-child,
.c7>tfoot>tr>th:last-child,
.c7>thead>tr>td:last-child,
.c7>tbody>tr>td:last-child,
.c7>tfoot>tr>td:last-child {
  padding-right: 24px;
}

.c7>tbody>tr>td {
  vertical-align: middle;
}

.c7>thead>tr>th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c7>thead>tr>th svg {
  height: 12px;
}

.c7>tbody>tr>td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c7 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
}

.c7 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c7 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.12),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 2px 4px -1px rgba(0, 0, 0, 0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c7 tbody tr:hover +tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c8 {
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px rgba(0, 0, 0, 0.14),0px 1px 3px rgba(0, 0, 0, 0.12);
}

.c8>tbody>tr td {
  vertical-align: middle;
  height: 32px;
}

.c8>tbody {
  background: #344179;
}

.c8>thead>tr>th {
  background: rgba(255,255,255,0.13);
}

<div
  class="c0 c1"
  width="604px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        3
         of 
        4
      </div>
      <h2
        class="c5"
      >
        Device Successfully Enrolled
      </h2>
    </div>
  </div>
  <div
    class="c6"
    color="text.slightlyMuted"
  >
    Take a look at your enrolled devices below and remove any that you don't need anymore.
  </div>
  <div
    class="c2"
  >
    <table
      class="c7 c8"
      style="overflow: hidden; border-radius: 8px;"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          >
            Type
          </th>
          <th
            style="cursor: default;"
          >
            Device Name
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Registered
              <span
                class="c9 icon icon-chevrondown"
                title="sort items desc"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Last Used
              <span
                class="c9 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Authenticator App
          </td>
          <td
            title="iphone 12"
          >
            <div
              class="c10"
              style="max-width: 96px; white-space: nowrap;"
            >
              iphone 12
            </div>
          </td>
          <td>
            2021-08-12
          </td>
          <td>
            2021-08-12
          </td>
          <td
            align="right"
          />
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="solokey"
          >
            <div
              class="c10"
              style="max-width: 96px; white-space: nowrap;"
            >
              solokey
            </div>
          </td>
          <td>
            2021-06-15
          </td>
          <td>
            2021-06-18
          </td>
          <td
            align="right"
          >
            <button
              class="c11"
              fill="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="backup yubikey"
          >
            <div
              class="c10"
              style="max-width: 96px; white-space: nowrap;"
            >
              backup yubikey
            </div>
          </td>
          <td>
            2021-04-18
          </td>
          <td>
            2021-07-16
          </td>
          <td
            align="right"
          >
            <button
              class="c11"
              fill="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="yubikey"
          >
            <div
              class="c10"
              style="max-width: 96px; white-space: nowrap;"
            >
              yubikey
            </div>
          </td>
          <td>
            2021-02-05
          </td>
          <td>
            2021-02-28
          </td>
          <td
            align="right"
          >
            <button
              class="c11"
              fill="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="c12"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</div>
`;

exports[`render device removal dialog 1`] = `
.c4 {
  box-sizing: border-box;
  width: 400px;
}

.c10 {
  box-sizing: border-box;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #FF6257;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c11:focus-visible,
.teleport-button__force-focus-visible .c11 {
  background-color: #FF6257;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #FF6257;
}

.c11:hover,
.teleport-button__force-hover .c11 {
  background-color: #FF8179;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c11:active,
.teleport-button__force-active .c11 {
  background-color: #FFA19A;
  border-color: transparent;
  color: #000000;
}

.c11:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c12:focus-visible,
.teleport-button__force-focus-visible .c12 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c12:hover,
.teleport-button__force-hover .c12 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c12:active,
.teleport-button__force-active .c12 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c12:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
  margin-bottom: 8px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  color: #FFFFFF;
}

.c5 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
}

.c6 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5 c6"
        width="400px"
      >
        <h2
          class="c7"
        >
          Remove Device
        </h2>
        <div
          class="c8"
        >
          Are you sure you want to remove device
           
          <span
            class="c9"
            color="text.main"
          >
            yubikey
          </span>
           
          ?
        </div>
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          fill="filled"
        >
          Remove
        </button>
        <button
          class="c12"
          fill="filled"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render failed state for device list 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin: 0;
  background: rgba(255, 98, 87, 0.1);
  border: 2px solid #FF6257;
  border-radius: 8px;
  box-shadow: none;
  justify-content: normal;
}

.c7 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 604px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c8:focus-visible,
.teleport-button__force-focus-visible .c8 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c8:hover,
.teleport-button__force-hover .c8 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c8:active,
.teleport-button__force-active .c8 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c8:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  color: rgba(255, 255, 255, 0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin-bottom: 16px;
  color: rgba(255, 255, 255, 0.72);
  text-align: center;
}

<div
  class="c0 c1"
  width="604px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        3
         of 
        4
      </div>
      <h2
        class="c5"
      >
        Device Successfully Enrolled
      </h2>
    </div>
  </div>
  <div
    class="c6"
    color="text.slightlyMuted"
  >
    Take a look at your enrolled devices below and remove any that you don't need anymore.
  </div>
  <div
    class="c2"
  >
    <div
      class="c7"
      kind="outline-danger"
    >
      failed to fetch devices
    </div>
  </div>
  <button
    class="c8"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</div>
`;
